# rz

./: Cargo.toml  Makefile  README.md
crates/rz-cli/: Cargo.toml
crates/rz-cli/src/: backend.rs  bootstrap.rs  bridge.rs  cmux.rs  lib.rs  log.rs  mailbox.rs  main.rs  nats_hub.rs  pty.rs  registry.rs  status.rs  telegram.rs  tmux.rs  transport.rs  zellij.rs
crates/rz-hub/: Cargo.toml
crates/rz-hub/src/: main.rs  registry.rs  router.rs
crates/rz-protocol/: Cargo.toml
crates/rz-protocol/src/: lib.rs
