[package]
name = "rz-agent"
version = "0.4.0"
edition = "2021"
description = "Universal messaging for AI agents — terminal, HTTP, NATS, or anywhere"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iliasoroka1/rz"
keywords = ["agents", "messaging", "terminal", "multi-agent", "nats"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "rz"
path = "src/main.rs"

[lib]
name = "rz_cli"
path = "src/lib.rs"

[features]
default = []
nats = ["dep:async-nats", "dep:tokio", "dep:futures"]

[dependencies]
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
rz-protocol = { version = "0.1.0", path = "../rz-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional — enabled with `cargo install rz-agent -F nats`
async-nats = { version = "0.46", optional = true }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"], optional = true }
futures = { version = "0.3", optional = true }
