[package]
name = "rz-agent"
version = "0.6.0"
edition = "2021"
description = "Universal messaging for AI agents — terminal, HTTP, NATS, or anywhere"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iliasoroka1/rz"
keywords = ["agents", "messaging", "terminal", "multi-agent", "nats"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "rz"
path = "src/main.rs"

[lib]
name = "rz_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
rz-agent-protocol = { version = "0.1.1", path = "../rz-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-nats = "0.46"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
futures = "0.3"
