[package]
name = "rz-agent"
version = "1.2.0"
edition = "2021"
description = "Universal messaging for AI agents — terminal, HTTP, NATS, or anywhere"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iliasoroka1/rz"
keywords = ["agents", "messaging", "terminal", "multi-agent", "nats"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "rz"
path = "src/main.rs"

[lib]
name = "rz_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
eyre = "0.6"
rz-agent-protocol = { version = "0.3.0", path = "../rz-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-nats = "0.46"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "signal"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
nix = { version = "0.29", features = ["term", "process", "signal", "fs", "poll"] }
libc = "0.2"
