[package]
name = "rz-hub"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Zellij WASM plugin for rz message routing"

[dependencies]
rz-agent-protocol = { version = "0.1.1", path = "../rz-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zellij-tile = "0.42"
